fix: 모달창 z-index 수정

--- a/css/footer.css
+++ b/css/footer.css
@@ -69,6 +69,7 @@ fieldset {
   bottom: 0;
   background-color: rgb(0,0,0,0.6);
   display: none;
+  z-index: 1;
 }
 
 .ptn_pop_signup {
